artifacts-java-services/csap-core-service/devData/stubResults/linux/iptables-kube-services.txt



iptables -t nat -L KUBE-SERVICES:

target     prot opt source               destination
KUBE-MARK-MASQ  tcp  -- !192.168.0.0/16       10.96.0.1            /* default/kubernetes:https cluster IP */ tcp dpt:https
KUBE-SVC-NPX46M4PTMTKRN6Y  tcp  --  anywhere             10.96.0.1            /* default/kubernetes:https cluster IP */ tcp dpt:https
KUBE-MARK-MASQ  tcp  -- !192.168.0.0/16       10.111.56.132        /* default/netmet-kafka-0-nodeport:external-broker cluster IP */ tcp dpt:19092
KUBE-SVC-I5SKWP7NM5PLPTKM  tcp  --  anywhere             10.111.56.132        /* default/netmet-kafka-0-nodeport:external-broker cluster IP */ tcp dpt:19092
KUBE-MARK-MASQ  tcp  -- !192.168.0.0/16       10.102.87.219        /* default/mongodb-exporter-service: cluster IP */ tcp dpt:acme
KUBE-SVC-GD3PHZLNLE3M6XHD  tcp  --  anywhere             10.102.87.219        /* default/mongodb-exporter-service: cluster IP */ tcp dpt:acme
KUBE-MARK-MASQ  tcp  -- !192.168.0.0/16       10.108.69.146        /* default/netmet-radios-rest-service-service:http-8080 cluster IP */ tcp dpt:webcache
KUBE-SVC-2WJFEG5W4HEQ6LUB  tcp  --  anywhere             10.108.69.146        /* default/netmet-radios-rest-service-service:http-8080 cluster IP */ tcp dpt:webcache
KUBE-MARK-MASQ  udp  -- !192.168.0.0/16       10.96.0.10           /* kube-system/kube-dns:dns cluster IP */ udp dpt:domain
KUBE-SVC-TCOU7JCQXEZGVUNU  udp  --  anywhere             10.96.0.10           /* kube-system/kube-dns:dns cluster IP */ udp dpt:domain
KUBE-MARK-MASQ  tcp  -- !192.168.0.0/16       10.111.74.117        /* default/netmet-postgres-service: cluster IP */ tcp dpt:postgres
KUBE-SVC-G7SESNTAQ5C7XJYC  tcp  --  anywhere             10.111.74.117        /* default/netmet-postgres-service: cluster IP */ tcp dpt:postgres
KUBE-MARK-MASQ  tcp  -- !192.168.0.0/16       10.96.212.103        /* default/netmet-filters-service-service:http-8080 cluster IP */ tcp dpt:webcache
KUBE-SVC-QL4UECIWIPPFY73P  tcp  --  anywhere             10.96.212.103        /* default/netmet-filters-service-service:http-8080 cluster IP */ tcp dpt:webcache
KUBE-MARK-MASQ  tcp  -- !192.168.0.0/16       10.99.248.83         /* default/netmet-towers-rest-service-service:http-8080 cluster IP */ tcp dpt:webcache
KUBE-SVC-JVIWTUEPUDJSFPV7  tcp  --  anywhere             10.99.248.83         /* default/netmet-towers-rest-service-service:http-8080 cluster IP */ tcp dpt:webcache
KUBE-MARK-MASQ  tcp  -- !192.168.0.0/16       10.100.62.208        /* default/ncs-help-service: cluster IP */ tcp dpt:http
KUBE-SVC-SHBNONTM6Y6YPI7M  tcp  --  anywhere             10.100.62.208        /* default/ncs-help-service: cluster IP */ tcp dpt:http
KUBE-MARK-MASQ  tcp  -- !192.168.0.0/16       10.98.142.48         /* kube-system/metrics-server: cluster IP */ tcp dpt:https
KUBE-SVC-LC5QY66VUV2HJ6WZ  tcp  --  anywhere             10.98.142.48         /* kube-system/metrics-server: cluster IP */ tcp dpt:https
KUBE-MARK-MASQ  tcp  -- !192.168.0.0/16       10.99.202.191        /* default/netmet-kafka-cp-kafka:broker cluster IP */ tcp dpt:XmlIpcRegSvc
KUBE-SVC-6J3CYGB5YBLJVLKS  tcp  --  anywhere             10.99.202.191        /* default/netmet-kafka-cp-kafka:broker cluster IP */ tcp dpt:XmlIpcRegSvc
KUBE-MARK-MASQ  tcp  -- !192.168.0.0/16       10.97.70.169         /* kube-system/netmet-kibana-service: cluster IP */ tcp dpt:esmagent
KUBE-SVC-KT2TBXTIHVBWS4G6  tcp  --  anywhere             10.97.70.169         /* kube-system/netmet-kibana-service: cluster IP */ tcp dpt:esmagent
KUBE-MARK-MASQ  tcp  -- !192.168.0.0/16       10.110.133.213       /* default/netmet-keycloak-0-w-nodeport:external-port cluster IP */ tcp dpt:osm-appsrvr
KUBE-SVC-RMZGKTMAZORH7WTX  tcp  --  anywhere             10.110.133.213       /* default/netmet-keycloak-0-w-nodeport:external-port cluster IP */ tcp dpt:osm-appsrvr
KUBE-MARK-MASQ  tcp  -- !192.168.0.0/16       10.98.50.13          /* default/netmet-keycloak-2-w-nodeport:external-port cluster IP */ tcp dpt:osm-appsrvr
KUBE-SVC-TOBQA7R6CLZYCR3G  tcp  --  anywhere             10.98.50.13          /* default/netmet-keycloak-2-w-nodeport:external-port cluster IP */ tcp dpt:osm-appsrvr
KUBE-MARK-MASQ  tcp  -- !192.168.0.0/16       10.100.7.159         /* default/netmet-grafana-service: cluster IP */ tcp dpt:hbci
KUBE-SVC-ESJX5LS5EZI7FCAE  tcp  --  anywhere             10.100.7.159         /* default/netmet-grafana-service: cluster IP */ tcp dpt:hbci
KUBE-MARK-MASQ  tcp  -- !192.168.0.0/16       10.103.217.39        /* default/netmet-alarms-service-service:http-8080 cluster IP */ tcp dpt:webcache
KUBE-SVC-FV6HVB2NTUTDYHMX  tcp  --  anywhere             10.103.217.39        /* default/netmet-alarms-service-service:http-8080 cluster IP */ tcp dpt:webcache
KUBE-MARK-MASQ  tcp  -- !192.168.0.0/16       10.109.102.106       /* default/netmet-radios-processing-service-service:http-8080 cluster IP */ tcp dpt:webcache
KUBE-SVC-2LCQ2SJXAOQJLPWJ  tcp  --  anywhere             10.109.102.106       /* default/netmet-radios-processing-service-service:http-8080 cluster IP */ tcp dpt:webcache
KUBE-MARK-MASQ  tcp  -- !192.168.0.0/16       10.99.70.205         /* kubernetes-dashboard/kubernetes-dashboard: cluster IP */ tcp dpt:https
KUBE-SVC-4CRUJHTV5RT5YMFY  tcp  --  anywhere             10.99.70.205         /* kubernetes-dashboard/kubernetes-dashboard: cluster IP */ tcp dpt:https
KUBE-MARK-MASQ  tcp  -- !192.168.0.0/16       10.101.79.233        /* default/netmet-configservice-service: cluster IP */ tcp dpt:ddi-tcp-1
KUBE-SVC-3LBF7FA5ERKGUQ5B  tcp  --  anywhere             10.101.79.233        /* default/netmet-configservice-service: cluster IP */ tcp dpt:ddi-tcp-1
KUBE-MARK-MASQ  tcp  -- !192.168.0.0/16       10.109.15.120        /* default/netmet-webapp-service: cluster IP */ tcp dpt:webcache
KUBE-SVC-C46QTKYWFC3UZYUH  tcp  --  anywhere             10.109.15.120        /* default/netmet-webapp-service: cluster IP */ tcp dpt:webcache
KUBE-MARK-MASQ  tcp  -- !192.168.0.0/16       10.103.48.91         /* kubernetes-dashboard/dashboard-metrics-scraper: cluster IP */ tcp dpt:irdmi
KUBE-SVC-NDSMHFCKXJRPU4FV  tcp  --  anywhere             10.103.48.91         /* kubernetes-dashboard/dashboard-metrics-scraper: cluster IP */ tcp dpt:irdmi
KUBE-MARK-MASQ  tcp  -- !192.168.0.0/16       10.105.122.75        /* keda/keda-operator-metrics:cr-metrics cluster IP */ tcp dpt:sun-as-jmxrmi
KUBE-SVC-FQODQ43EVJV2YLB3  tcp  --  anywhere             10.105.122.75        /* keda/keda-operator-metrics:cr-metrics cluster IP */ tcp dpt:sun-as-jmxrmi
KUBE-MARK-MASQ  tcp  -- !192.168.0.0/16       10.105.32.69         /* default/netmet-zuul-service:http-8765 cluster IP */ tcp dpt:ultraseek-http
KUBE-SVC-BOZPMZWCLINMW23Y  tcp  --  anywhere             10.105.32.69         /* default/netmet-zuul-service:http-8765 cluster IP */ tcp dpt:ultraseek-http
KUBE-MARK-MASQ  tcp  -- !192.168.0.0/16       10.111.177.159       /* default/netmet-history-service-service:http-8080 cluster IP */ tcp dpt:webcache
KUBE-SVC-QBM6GY2QZKAIMSRE  tcp  --  anywhere             10.111.177.159       /* default/netmet-history-service-service:http-8080 cluster IP */ tcp dpt:webcache
KUBE-MARK-MASQ  tcp  -- !192.168.0.0/16       10.110.3.216         /* default/netmet-prometheus-alertmanager-service:http cluster IP */ tcp dpt:http
KUBE-SVC-SJTHEBO5WRSTISGQ  tcp  --  anywhere             10.110.3.216         /* default/netmet-prometheus-alertmanager-service:http cluster IP */ tcp dpt:http
KUBE-MARK-MASQ  tcp  -- !192.168.0.0/16       10.103.253.163       /* default/netmet-trigger-processor-cluster:query cluster IP */ tcp dpt:6125
KUBE-SVC-EKBKSA6ZDQ3AD4OQ  tcp  --  anywhere             10.103.253.163       /* default/netmet-trigger-processor-cluster:query cluster IP */ tcp dpt:6125
KUBE-MARK-MASQ  tcp  -- !192.168.0.0/16       10.101.51.14         /* default/netmet-kafka-manager-service: cluster IP */ tcp dpt:http
KUBE-SVC-KHPVCEYSLSCJAO4H  tcp  --  anywhere             10.101.51.14         /* default/netmet-kafka-manager-service: cluster IP */ tcp dpt:http
KUBE-MARK-MASQ  tcp  -- !192.168.0.0/16       10.106.49.50         /* default/netmet-mdm-service-service: cluster IP */ tcp dpt:8760
KUBE-SVC-TSRNJTZIKQOQYMY6  tcp  --  anywhere             10.106.49.50         /* default/netmet-mdm-service-service: cluster IP */ tcp dpt:8760
KUBE-MARK-MASQ  tcp  -- !192.168.0.0/16       10.102.155.166       /* keda/keda-metrics-apiserver:http cluster IP */ tcp dpt:http
KUBE-SVC-VS7NGB5M35REAMOW  tcp  --  anywhere             10.102.155.166       /* keda/keda-metrics-apiserver:http cluster IP */ tcp dpt:http
KUBE-MARK-MASQ  tcp  -- !192.168.0.0/16       10.111.103.162       /* default/netmet-soft-alarms-service-service:http-8080 cluster IP */ tcp dpt:webcache
KUBE-SVC-BDDE3LTKIQJLMUST  tcp  --  anywhere             10.111.103.162       /* default/netmet-soft-alarms-service-service:http-8080 cluster IP */ tcp dpt:webcache
KUBE-MARK-MASQ  tcp  -- !192.168.0.0/16       10.106.131.169       /* default/netmet-kafka-2-nodeport:external-broker cluster IP */ tcp dpt:19092
KUBE-SVC-6LBUJXIPJNK3WIHU  tcp  --  anywhere             10.106.131.169       /* default/netmet-kafka-2-nodeport:external-broker cluster IP */ tcp dpt:19092
KUBE-MARK-MASQ  tcp  -- !192.168.0.0/16       10.104.79.94         /* default/netmet-kafka-1-nodeport:external-broker cluster IP */ tcp dpt:19092
KUBE-SVC-QVPKIWQGXWYZ53Y3  tcp  --  anywhere             10.104.79.94         /* default/netmet-kafka-1-nodeport:external-broker cluster IP */ tcp dpt:19092
KUBE-MARK-MASQ  tcp  -- !192.168.0.0/16       10.105.122.75        /* keda/keda-operator-metrics:http-metrics cluster IP */ tcp dpt:m2mservices
KUBE-SVC-CE6RVJGQHW4IZZS5  tcp  --  anywhere             10.105.122.75        /* keda/keda-operator-metrics:http-metrics cluster IP */ tcp dpt:m2mservices
KUBE-MARK-MASQ  tcp  -- !192.168.0.0/16       10.103.163.19        /* default/auth-provider-service-service:http-8080 cluster IP */ tcp dpt:webcache
KUBE-SVC-RK4WD4EGPAO2ZIJ5  tcp  --  anywhere             10.103.163.19        /* default/auth-provider-service-service:http-8080 cluster IP */ tcp dpt:webcache
KUBE-MARK-MASQ  tcp  -- !192.168.0.0/16       10.100.232.225       /* default/netmet-towers-processing-service-service:http-8080 cluster IP */ tcp dpt:webcache
KUBE-SVC-WK77ZDJCHH2MAHFR  tcp  --  anywhere             10.100.232.225       /* default/netmet-towers-processing-service-service:http-8080 cluster IP */ tcp dpt:webcache
KUBE-MARK-MASQ  tcp  -- !192.168.0.0/16       10.96.0.10           /* kube-system/kube-dns:metrics cluster IP */ tcp dpt:9153
KUBE-SVC-JD5MR3NA4I4DYORP  tcp  --  anywhere             10.96.0.10           /* kube-system/kube-dns:metrics cluster IP */ tcp dpt:9153
KUBE-MARK-MASQ  tcp  -- !192.168.0.0/16       10.105.110.219       /* default/netmet-mongo-service: cluster IP */ tcp dpt:27017
KUBE-SVC-QABDFIFMPKQBFA6R  tcp  --  anywhere             10.105.110.219       /* default/netmet-mongo-service: cluster IP */ tcp dpt:27017
KUBE-MARK-MASQ  tcp  -- !192.168.0.0/16       10.99.101.55         /* default/netmet-keycloak:http cluster IP */ tcp dpt:webcache
KUBE-SVC-7QI7C4XQYRIOU7IA  tcp  --  anywhere             10.99.101.55         /* default/netmet-keycloak:http cluster IP */ tcp dpt:webcache
KUBE-MARK-MASQ  tcp  -- !192.168.0.0/16       10.98.250.115        /* kube-system/netmet-elasticsearch-hq-service:http cluster IP */ tcp dpt:http
KUBE-SVC-WDLWTJO726APJNDE  tcp  --  anywhere             10.98.250.115        /* kube-system/netmet-elasticsearch-hq-service:http cluster IP */ tcp dpt:http
KUBE-MARK-MASQ  tcp  -- !192.168.0.0/16       10.110.190.228       /* default/old-webapp-service: cluster IP */ tcp dpt:webcache
KUBE-SVC-H74GWJFW6TXL5ARU  tcp  --  anywhere             10.110.190.228       /* default/old-webapp-service: cluster IP */ tcp dpt:webcache
KUBE-MARK-MASQ  tcp  -- !192.168.0.0/16       10.106.254.12        /* default/netmet-keycloak-1-w-nodeport:external-port cluster IP */ tcp dpt:osm-appsrvr
KUBE-SVC-V3YS4RKPVM3EXJ4G  tcp  --  anywhere             10.106.254.12        /* default/netmet-keycloak-1-w-nodeport:external-port cluster IP */ tcp dpt:osm-appsrvr
KUBE-MARK-MASQ  tcp  -- !192.168.0.0/16       10.98.36.17          /* default/netmet-zookeeper-cp-zookeeper:client cluster IP */ tcp dpt:eforward
KUBE-SVC-Y4XXBS3N5LR3Y5D2  tcp  --  anywhere             10.98.36.17          /* default/netmet-zookeeper-cp-zookeeper:client cluster IP */ tcp dpt:eforward
KUBE-MARK-MASQ  tcp  -- !192.168.0.0/16       10.102.155.166       /* keda/keda-metrics-apiserver:https cluster IP */ tcp dpt:https
KUBE-SVC-RAQVKMO3KNIC6RLS  tcp  --  anywhere             10.102.155.166       /* keda/keda-metrics-apiserver:https cluster IP */ tcp dpt:https
KUBE-MARK-MASQ  tcp  -- !192.168.0.0/16       10.103.253.163       /* default/netmet-trigger-processor-cluster:ui cluster IP */ tcp dpt:tproxy
KUBE-SVC-WLQK2UA6EIZLCAXH  tcp  --  anywhere             10.103.253.163       /* default/netmet-trigger-processor-cluster:ui cluster IP */ tcp dpt:tproxy
KUBE-MARK-MASQ  tcp  -- !192.168.0.0/16       10.101.81.55         /* default/netmet-radios-tasks-service-service:http-8080 cluster IP */ tcp dpt:webcache
KUBE-SVC-GPF4RFMBZ2MVGTWJ  tcp  --  anywhere             10.101.81.55         /* default/netmet-radios-tasks-service-service:http-8080 cluster IP */ tcp dpt:webcache
KUBE-MARK-MASQ  tcp  -- !192.168.0.0/16       10.96.0.10           /* kube-system/kube-dns:dns-tcp cluster IP */ tcp dpt:domain
KUBE-SVC-ERIFXISQEP7F7OF4  tcp  --  anywhere             10.96.0.10           /* kube-system/kube-dns:dns-tcp cluster IP */ tcp dpt:domain
KUBE-MARK-MASQ  tcp  -- !192.168.0.0/16       10.109.45.254        /* matomo/matomo-db: cluster IP */ tcp dpt:mysql
KUBE-SVC-LMIPPYQNPJCXQ6YN  tcp  --  anywhere             10.109.45.254        /* matomo/matomo-db: cluster IP */ tcp dpt:mysql
KUBE-MARK-MASQ  tcp  -- !192.168.0.0/16       10.103.253.163       /* default/netmet-trigger-processor-cluster:rpm cluster IP */ tcp dpt:backup-express
KUBE-SVC-ASG5BDP7BWP2KC2H  tcp  --  anywhere             10.103.253.163       /* default/netmet-trigger-processor-cluster:rpm cluster IP */ tcp dpt:backup-express
KUBE-MARK-MASQ  tcp  -- !192.168.0.0/16       10.100.45.230        /* default/netmet-customer-service-service:http-8080 cluster IP */ tcp dpt:webcache
KUBE-SVC-VGAHSVPI6LKXQIR3  tcp  --  anywhere             10.100.45.230        /* default/netmet-customer-service-service:http-8080 cluster IP */ tcp dpt:webcache
KUBE-MARK-MASQ  tcp  -- !192.168.0.0/16       10.109.222.152       /* default/netmet-prometheus-server-service:http cluster IP */ tcp dpt:http
KUBE-SVC-2QOYR2HTIFZEWIK3  tcp  --  anywhere             10.109.222.152       /* default/netmet-prometheus-server-service:http cluster IP */ tcp dpt:http
KUBE-MARK-MASQ  tcp  -- !192.168.0.0/16       10.110.79.133        /* matomo/matomo:matomo cluster IP */ tcp dpt:http
KUBE-SVC-GF3ORCFW2VUB2COU  tcp  --  anywhere             10.110.79.133        /* matomo/matomo:matomo cluster IP */ tcp dpt:http
KUBE-MARK-MASQ  tcp  -- !192.168.0.0/16       10.106.105.32        /* default/netmet-springbootadmin-service:http-8085 cluster IP */ tcp dpt:8085
KUBE-SVC-7BRDI5UYTDS5R3D4  tcp  --  anywhere             10.106.105.32        /* default/netmet-springbootadmin-service:http-8085 cluster IP */ tcp dpt:8085
KUBE-MARK-MASQ  tcp  -- !192.168.0.0/16       10.103.253.163       /* default/netmet-trigger-processor-cluster:blob cluster IP */ tcp dpt:pnbs
KUBE-SVC-RB5G5ZFL65VLKUBR  tcp  --  anywhere             10.103.253.163       /* default/netmet-trigger-processor-cluster:blob cluster IP */ tcp dpt:pnbs
KUBE-MARK-MASQ  tcp  -- !192.168.0.0/16       10.107.66.44         /* default/netmet-eureka-service: cluster IP */ tcp dpt:8761
KUBE-SVC-FYB6KXD6NWKVDZRO  tcp  --  anywhere             10.107.66.44         /* default/netmet-eureka-service: cluster IP */ tcp dpt:8761
KUBE-MARK-MASQ  tcp  -- !192.168.0.0/16       10.109.124.119       /* default/netmet-frequency-mapping-service-service:http-8080 cluster IP */ tcp dpt:webcache
KUBE-SVC-NLP3O3DKELMFHZN3  tcp  --  anywhere             10.109.124.119       /* default/netmet-frequency-mapping-service-service:http-8080 cluster IP */ tcp dpt:webcache
KUBE-MARK-MASQ  tcp  -- !192.168.0.0/16       10.102.101.223       /* default/netmet-towers-tasks-service-service:http-8080 cluster IP */ tcp dpt:webcache
KUBE-SVC-Z6QGIAOC62INCAN7  tcp  --  anywhere             10.102.101.223       /* default/netmet-towers-tasks-service-service:http-8080 cluster IP */ tcp dpt:webcache
KUBE-MARK-MASQ  tcp  -- !192.168.0.0/16       10.109.25.22         /* default/netmet-web-dev-shim-service:http-8080 cluster IP */ tcp dpt:webcache
KUBE-SVC-JHLWBM7DXV5HF4VX  tcp  --  anywhere             10.109.25.22         /* default/netmet-web-dev-shim-service:http-8080 cluster IP */ tcp dpt:webcache
KUBE-NODEPORTS  all  --  anywhere             anywhere             /* kubernetes service nodeports; NOTE: this must be the last rule in this chain */ ADDRTYPE match dst-type LOCAL
